--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <title>چت بات آواج</title>
 </head>
 <body>
+
 <script>
 window.addEventListener("DOMContentLoaded", function(){
 
     const KEY = "Bearer sk-b855a785d191a49b634143adee34f6d2";
     const URL = "https://api.talkbot.ir/v1/chat/completions";
 
-    // ---- CSS ----
+    /* -------------------  CSS  ------------------- */
     const css = `
         #avaj-chat-box{
             position:fixed;
@@ -20,16 +21,21 @@ window.addEventListener("DOMContentLoaded", function(){
             transform:translate(-50%,-50%);
             width:420px;
             height:500px;
-            background:#F3E9D2;
             border-radius:14px;
-            box-shadow:0 4px 12px rgba(0,0,0,0.25);
             display:flex;
             flex-direction:column;
             overflow:hidden;
             z-index:9999999;
             font-family:sans-serif;
             transition: all 0.3s ease;
+            box-shadow:0 4px 12px rgba(0,0,0,0.25);
+
+            /* والپیپر جدید */
+            background-image:url('https://static.vecteezy.com/system/resources/previews/006/188/164/non_2x/seamless-pattern-doodle-many-icons-of-books-scattered-background-for-education-elearning-school-concept-pile-of-paper-books-open-book-book-on-computer-screen-ebooks-glasses-heart-vector.jpg');
+            background-size:cover;
+            background-position:center;
         }
+
         #avaj-fullscreen-btn{
             position:absolute;
             top:8px;
@@ -43,6 +49,7 @@ window.addEventListener("DOMContentLoaded", function(){
             cursor:pointer;
             z-index:10;
         }
+
         #avaj-messages{
             flex:1;
             padding:12px;
@@ -50,28 +57,46 @@ window.addEventListener("DOMContentLoaded", function(){
             display:flex;
             flex-direction:column;
             gap:8px;
-            margin-top:30px; 
+            margin-top:30px;
         }
+
         .avaj-msg{
             padding:8px 12px;
             border-radius:10px;
             max-width:70%;
             word-break: break-word;
+            background:rgba(255,255,255,0.7);
+            backdrop-filter:blur(6px);
         }
-        .avaj-user{align-self:flex-end;background:#E8D9C1;}
-        .avaj-bot{align-self:flex-start;background:#DCCEB6;}
+
+        .avaj-user{align-self:flex-end;}
+        .avaj-bot{align-self:flex-start;}
+
         #avaj-inputArea{
             display:flex;
             padding:8px;
-            background:#E8D9C1;
+            background:rgba(255,255,255,0.7);
+            backdrop-filter:blur(8px);
         }
+
         #avaj-text{
             flex:1;
             padding:6px;
             border-radius:6px;
             border:1px solid #BDAA8C;
-            background:#FFF9EE;
+            background:#ffffffcc;
+            outline:none;
         }
+
+        /* انیمیشن هنگام تایپ در input */
+        #avaj-text:focus {
+            animation: inputGlow 1s infinite alternate;
+        }
+        @keyframes inputGlow {
+            from { box-shadow: 0 0 0px #B89B72; }
+            to   { box-shadow: 0 0 8px #B89B72; }
+        }
+
         #avaj-send{
             padding:6px 14px;
             background:#B89B72;
@@ -80,14 +105,16 @@ window.addEventListener("DOMContentLoaded", function(){
             border-radius:6px;
             cursor:pointer;
         }
+
         #avaj-footer{
             text-align:center;
             padding:4px;
             font-size:12px;
             color:#5A4A3A;
-            background:#E8D9C1;
+            background:rgba(255,255,255,0.7);
             border-top:1px solid #C9B79A;
         }
+
         /* حالت تمام صفحه */
         #avaj-chat-box.fullscreen{
             top:0;
@@ -100,14 +127,13 @@ window.addEventListener("DOMContentLoaded", function(){
         #avaj-chat-box.fullscreen #avaj-messages{
             margin-top:0;
         }
-        /* Typing Dots */
+
+        /* انیمیشن نقطه‌های در حال تایپ */
         .typing-dots{
             display:flex;
             gap:4px;
             align-items:center;
-            justify-content:flex-start;
             height:20px;
-            margin-bottom:4px;
         }
         .typing-dot{
             width:6px;
@@ -118,6 +144,7 @@ window.addEventListener("DOMContentLoaded", function(){
         }
         .typing-dot:nth-child(2){animation-delay:0.2s;}
         .typing-dot:nth-child(3){animation-delay:0.4s;}
+
         @keyframes dot-bounce{
             0%,100%{transform:translateY(0);}
             50%{transform:translateY(-6px);}
@@ -127,7 +154,7 @@ window.addEventListener("DOMContentLoaded", function(){
     style.innerHTML = css;
     document.head.appendChild(style);
 
-    // ---- HTML ----
+    /* ------------------ HTML ------------------ */
     const box = document.createElement("div");
     box.id = "avaj-chat-box";
     box.innerHTML = `
@@ -146,7 +173,7 @@ window.addEventListener("DOMContentLoaded", function(){
     const send = document.getElementById("avaj-send");
     const fullscreenBtn = document.getElementById("avaj-fullscreen-btn");
 
-    // ---- Fullscreen Toggle ----
+    /* ------------------ Fullscreen ------------------ */
     let fs = false;
     fullscreenBtn.onclick = ()=>{
         fs = !fs;
@@ -159,7 +186,7 @@ window.addEventListener("DOMContentLoaded", function(){
         }
     };
 
-    // ---- Chat Functions ----
+    /* ------------------ پیام‌ها ------------------ */
     function addMsg(type,text){
         const m = document.createElement("div");
         m.className = "avaj-msg avaj-" + type;
@@ -188,6 +215,7 @@ window.addEventListener("DOMContentLoaded", function(){
         if(t) t.remove();
     }
 
+    /* ------------------ ارسال ------------------ */
     send.onclick = async ()=>{
         const text = txt.value.trim();
         if(!text) return;
@@ -224,5 +252,6 @@ window.addEventListener("DOMContentLoaded", function(){
 
 });
 </script>
+
 </body>
 </html>
