--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ window.addEventListener("DOMContentLoaded", function(){
     const KEY = "Bearer sk-b855a785d191a49b634143adee34f6d2";
     const URL = "https://api.talkbot.ir/v1/chat/completions";
 
-    /* -------------------  CSS  ------------------- */
+    /* ---------------- CSS ---------------- */
     const css = `
         #avaj-chat-box{
             position:fixed;
@@ -30,7 +30,6 @@ window.addEventListener("DOMContentLoaded", function(){
             transition: all 0.3s ease;
             box-shadow:0 4px 12px rgba(0,0,0,0.25);
 
-            /* والپیپر جدید */
             background-image:url('https://static.vecteezy.com/system/resources/previews/006/188/164/non_2x/seamless-pattern-doodle-many-icons-of-books-scattered-background-for-education-elearning-school-concept-pile-of-paper-books-open-book-book-on-computer-screen-ebooks-glasses-heart-vector.jpg');
             background-size:cover;
             background-position:center;
@@ -88,7 +87,7 @@ window.addEventListener("DOMContentLoaded", function(){
             outline:none;
         }
 
-        /* انیمیشن هنگام تایپ در input */
+        /* glow هنگام تایپ */
         #avaj-text:focus {
             animation: inputGlow 1s infinite alternate;
         }
@@ -115,7 +114,6 @@ window.addEventListener("DOMContentLoaded", function(){
             border-top:1px solid #C9B79A;
         }
 
-        /* حالت تمام صفحه */
         #avaj-chat-box.fullscreen{
             top:0;
             left:0;
@@ -128,7 +126,7 @@ window.addEventListener("DOMContentLoaded", function(){
             margin-top:0;
         }
 
-        /* انیمیشن نقطه‌های در حال تایپ */
+        /* انیمیشن نقطه‌ها */
         .typing-dots{
             display:flex;
             gap:4px;
@@ -154,7 +152,8 @@ window.addEventListener("DOMContentLoaded", function(){
     style.innerHTML = css;
     document.head.appendChild(style);
 
-    /* ------------------ HTML ------------------ */
+
+    /* ---------------- HTML ---------------- */
     const box = document.createElement("div");
     box.id = "avaj-chat-box";
     box.innerHTML = `
@@ -168,12 +167,14 @@ window.addEventListener("DOMContentLoaded", function(){
     `;
     document.body.appendChild(box);
 
+
     const msgs = document.getElementById("avaj-messages");
     const txt = document.getElementById("avaj-text");
     const send = document.getElementById("avaj-send");
     const fullscreenBtn = document.getElementById("avaj-fullscreen-btn");
 
-    /* ------------------ Fullscreen ------------------ */
+
+    /* ---------------- Fullscreen ---------------- */
     let fs = false;
     fullscreenBtn.onclick = ()=>{
         fs = !fs;
@@ -186,15 +187,41 @@ window.addEventListener("DOMContentLoaded", function(){
         }
     };
 
-    /* ------------------ پیام‌ها ------------------ */
-    function addMsg(type,text){
+
+    /* ---------------- انیمیشن تایپ ---------------- */
+    function typeWriterEffect(text, element, speed = 25) {
+        let index = 0;
+        function typeNext() {
+            if (index < text.length) {
+                element.textContent += text.charAt(index);
+                index++;
+                setTimeout(typeNext, speed);
+            }
+        }
+        typeNext();
+    }
+
+    function addBotTypingMessage(fullText) {
+        const bubble = document.createElement("div");
+        bubble.className = "avaj-msg avaj-bot";
+        msgs.appendChild(bubble);
+        msgs.scrollTop = msgs.scrollHeight;
+
+        typeWriterEffect(fullText, bubble, 25);
+    }
+
+
+    /* ---------------- پیام‌های معمولی ---------------- */
+    function addUserMsg(text){
         const m = document.createElement("div");
-        m.className = "avaj-msg avaj-" + type;
+        m.className = "avaj-msg avaj-user";
         m.textContent = text;
         msgs.appendChild(m);
         msgs.scrollTop = msgs.scrollHeight;
     }
 
+
+    /* ---------------- نقطه‌های تایپ ---------------- */
     function addTyping(){
         const typing = document.createElement("div");
         typing.className = "avaj-msg avaj-bot";
@@ -215,12 +242,13 @@ window.addEventListener("DOMContentLoaded", function(){
         if(t) t.remove();
     }
 
-    /* ------------------ ارسال ------------------ */
+
+    /* ---------------- ارسال ---------------- */
     send.onclick = async ()=>{
         const text = txt.value.trim();
         if(!text) return;
 
-        addMsg("user",text);
+        addUserMsg(text);
         txt.value = "";
 
         addTyping();
@@ -242,11 +270,11 @@ window.addEventListener("DOMContentLoaded", function(){
 
             const data = await res.json();
             const answer = data?.choices?.[0]?.message?.content || "خطا!";
-            addMsg("bot",answer);
+            addBotTypingMessage(answer);
 
         } catch(e){
             removeTyping();
-            addMsg("bot","❌ اتصال برقرار نشد!");
+            addBotTypingMessage("❌ اتصال برقرار نشد!");
         }
     };
 
