--- a/index.html
+++ b/index.html
@@ -2,268 +2,168 @@
 <html lang="fa" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>چت بات آواج با تاریخچه</title>
+<title>چت بات آواج پیشرفته</title>
+<style>
+#avaj-chat-box{
+    position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
+    width:420px; height:520px; border-radius:14px; display:flex;
+    flex-direction:column; overflow:hidden; z-index:9999999;
+    font-family:sans-serif; box-shadow:0 4px 12px rgba(0,0,0,0.25);
+    background:#f7f4ef;
+}
+#avaj-fullscreen-btn{
+    position:absolute; top:8px; left:8px; background:#B89B72;
+    color:#fff; border:none; padding:4px 8px; border-radius:6px;
+    font-size:12px; cursor:pointer; z-index:10;
+}
+#avaj-messages{
+    flex:1; padding:12px; overflow-y:auto; display:flex;
+    flex-direction:column; gap:8px; margin-top:30px;
+}
+.avaj-msg{ padding:8px 12px; border-radius:10px;
+    max-width:70%; word-break: break-word; background:rgba(255,255,255,0.7);
+    backdrop-filter:blur(6px);
+}
+.avaj-user{align-self:flex-end;}
+.avaj-bot{align-self:flex-start;}
+#avaj-inputArea{ display:flex; padding:8px; background:rgba(255,255,255,0.7); backdrop-filter:blur(8px);}
+#avaj-text{ flex:1; padding:6px; border-radius:6px; border:1px solid #BDAA8C; background:#ffffffcc; outline:none;}
+#avaj-send{ padding:6px 14px; background:#B89B72; color:#fff; border:none; border-radius:6px; cursor:pointer;}
+#avaj-footer{ text-align:center; padding:4px; font-size:12px; color:#5A4A3A; background:rgba(255,255,255,0.7); border-top:1px solid #C9B79A;}
+#avaj-chat-box.fullscreen{ top:0; left:0; transform:none; width:100vw; height:100vh; border-radius:0;}
+#avaj-chat-box.fullscreen #avaj-messages{ margin-top:0;}
+.typing-dots{ display:flex; gap:4px; align-items:center; height:20px;}
+.typing-dot{ width:6px; height:6px; background:#7A6A52; border-radius:50%; animation:dot-bounce 1.2s infinite;}
+.typing-dot:nth-child(2){animation-delay:0.2s;}
+.typing-dot:nth-child(3){animation-delay:0.4s;}
+@keyframes dot-bounce{0%,100%{transform:translateY(0);}50%{transform:translateY(-6px);}}
+#avaj-quick-btns{ display:flex; gap:6px; flex-wrap:wrap; padding:4px; background:#f0ede4;}
+.quick-btn{ padding:4px 8px; background:#B89B72; color:#fff; border:none; border-radius:6px; cursor:pointer; font-size:12px;}
+#avaj-newchat{ margin-top:4px; padding:4px; background:#7A6A52; color:#fff; border:none; border-radius:6px; cursor:pointer; font-size:12px;}
+</style>
 </head>
 <body>
 
+<div id="avaj-chat-box">
+    <button id="avaj-fullscreen-btn">⛶</button>
+    <div id="avaj-messages"></div>
+    <div id="avaj-quick-btns"></div>
+    <div id="avaj-inputArea">
+        <input id="avaj-text" placeholder="پیام بنویس...">
+        <button id="avaj-send">ارسال</button>
+    </div>
+    <button id="avaj-newchat">🆕 چت جدید</button>
+    <div id="avaj-footer">قدرت گرفته شده از <b>آواج</b></div>
+</div>
+
 <script>
-window.addEventListener("DOMContentLoaded", function(){
+const KEY = "Bearer sk-b855a785d191a49b634143adee34f6d2";
+const URL = "https://api.talkbot.ir/v1/chat/completions";
 
-    const KEY = "Bearer sk-b855a785d191a49b634143adee34f6d2";
-    const URL = "https://api.talkbot.ir/v1/chat/completions";
+const msgs = document.getElementById("avaj-messages");
+const txt = document.getElementById("avaj-text");
+const send = document.getElementById("avaj-send");
+const fullscreenBtn = document.getElementById("avaj-fullscreen-btn");
+const quickBtns = document.getElementById("avaj-quick-btns");
+const newChatBtn = document.getElementById("avaj-newchat");
 
-    /* ---------------- CSS ---------------- */
-    const css = `
-        #avaj-chat-box{
-            position:fixed;
-            top:50%;
-            left:50%;
-            transform:translate(-50%,-50%);
-            width:420px;
-            height:500px;
-            border-radius:14px;
-            display:flex;
-            flex-direction:column;
-            overflow:hidden;
-            z-index:9999999;
-            font-family:sans-serif;
-            transition: all 0.3s ease;
-            box-shadow:0 4px 12px rgba(0,0,0,0.25);
-            background-image:url('https://static.vecteezy.com/system/resources/previews/006/188/164/non_2x/seamless-pattern-doodle-many-icons-of-books-scattered-background-for-education-elearning-school-concept-pile-of-paper-books-open-book-book-on-computer-screen-ebooks-glasses-heart-vector.jpg');
-            background-size:cover;
-            background-position:center;
-        }
+/* ---------------- Fullscreen ---------------- */
+let fs = false;
+fullscreenBtn.onclick = ()=>{ fs = !fs; document.getElementById("avaj-chat-box").classList.toggle("fullscreen"); fullscreenBtn.innerText = fs?"✖":"⛶"; };
 
-        #avaj-fullscreen-btn{
-            position:absolute;
-            top:8px;
-            left:8px;
-            background:#B89B72;
-            color:#fff;
-            border:none;
-            padding:4px 8px;
-            border-radius:6px;
-            font-size:12px;
-            cursor:pointer;
-            z-index:10;
-        }
+/* ---------------- تاریخچه ---------------- */
+function saveMessage(role,text){
+    let history = JSON.parse(localStorage.getItem("avajHistory")||"[]");
+    history.push({role,text});
+    localStorage.setItem("avajHistory",JSON.stringify(history));
+}
 
-        #avaj-messages{
-            flex:1;
-            padding:12px;
-            overflow-y:auto;
-            display:flex;
-            flex-direction:column;
-            gap:8px;
-            margin-top:30px;
-        }
-
-        .avaj-msg{
-            padding:8px 12px;
-            border-radius:10px;
-            max-width:70%;
-            word-break: break-word;
-            background:rgba(255,255,255,0.7);
-            backdrop-filter:blur(6px);
-        }
-
-        .avaj-user{align-self:flex-end;}
-        .avaj-bot{align-self:flex-start;}
-
-        #avaj-inputArea{
-            display:flex;
-            padding:8px;
-            background:rgba(255,255,255,0.7);
-            backdrop-filter:blur(8px);
-        }
-
-        #avaj-text{
-            flex:1;
-            padding:6px;
-            border-radius:6px;
-            border:1px solid #BDAA8C;
-            background:#ffffffcc;
-            outline:none;
-        }
-
-        #avaj-text:focus { animation: inputGlow 1s infinite alternate; }
-        @keyframes inputGlow { from { box-shadow: 0 0 0px #B89B72; } to { box-shadow: 0 0 8px #B89B72; } }
-
-        #avaj-send{
-            padding:6px 14px;
-            background:#B89B72;
-            color:#fff;
-            border:none;
-            border-radius:6px;
-            cursor:pointer;
-        }
-
-        #avaj-footer{
-            text-align:center;
-            padding:4px;
-            font-size:12px;
-            color:#5A4A3A;
-            background:rgba(255,255,255,0.7);
-            border-top:1px solid #C9B79A;
-        }
-
-        #avaj-chat-box.fullscreen{
-            top:0;
-            left:0;
-            transform:none;
-            width:100vw;
-            height:100vh;
-            border-radius:0;
-        }
-        #avaj-chat-box.fullscreen #avaj-messages{ margin-top:0; }
-
-        .typing-dots{
-            display:flex;
-            gap:4px;
-            align-items:center;
-            height:20px;
-        }
-        .typing-dot{
-            width:6px;
-            height:6px;
-            background:#7A6A52;
-            border-radius:50%;
-            animation:dot-bounce 1.2s infinite;
-        }
-        .typing-dot:nth-child(2){animation-delay:0.2s;}
-        .typing-dot:nth-child(3){animation-delay:0.4s;}
-        @keyframes dot-bounce{ 0%,100%{transform:translateY(0);} 50%{transform:translateY(-6px);} }
-    `;
-    const style = document.createElement("style");
-    style.innerHTML = css;
-    document.head.appendChild(style);
-
-
-    /* ---------------- HTML ---------------- */
-    const box = document.createElement("div");
-    box.id = "avaj-chat-box";
-    box.innerHTML = `
-        <button id="avaj-fullscreen-btn">⛶</button>
-        <div id="avaj-messages"></div>
-        <div id="avaj-inputArea">
-            <input id="avaj-text" placeholder="پیام بنویس...">
-            <button id="avaj-send">ارسال</button>
-        </div>
-        <div id="avaj-footer">قدرت گرفته شده از <b>آواج</b></div>
-    `;
-    document.body.appendChild(box);
-
-    const msgs = document.getElementById("avaj-messages");
-    const txt = document.getElementById("avaj-text");
-    const send = document.getElementById("avaj-send");
-    const fullscreenBtn = document.getElementById("avaj-fullscreen-btn");
-
-    /* ---------------- Fullscreen ---------------- */
-    let fs = false;
-    fullscreenBtn.onclick = ()=>{ fs = !fs; box.classList.toggle("fullscreen"); fullscreenBtn.innerText = fs?"✖":"⛶"; };
-
-    /* ---------------- انیمیشن تایپ ---------------- */
-    function typeWriterEffect(text, element, speed = 25) {
-        let index = 0;
-        function typeNext() {
-            if (index < text.length) {
-                element.textContent += text.charAt(index);
-                index++;
-                setTimeout(typeNext, speed);
-            }
-        }
-        typeNext();
-    }
-
-    function addBotTypingMessage(fullText){
+function loadHistory(){
+    msgs.innerHTML="";
+    let history = JSON.parse(localStorage.getItem("avajHistory")||"[]");
+    history.forEach(msg=>{
         const bubble = document.createElement("div");
-        bubble.className = "avaj-msg avaj-bot";
+        bubble.className="avaj-msg "+(msg.role=="user"?"avaj-user":"avaj-bot");
+        bubble.textContent=msg.text;
         msgs.appendChild(bubble);
-        msgs.scrollTop = msgs.scrollHeight;
-        typeWriterEffect(fullText, bubble, 25);
-        saveMessage("bot", fullText);
+    });
+    msgs.scrollTop = msgs.scrollHeight;
+}
+loadHistory();
+
+/* ---------------- انیمیشن تایپ ---------------- */
+function typeWriterEffect(text, element, speed=25){
+    let i=0;
+    function next(){
+        if(i<text.length){ element.textContent+=text.charAt(i); i++; setTimeout(next,speed); }
     }
+    next();
+}
+function addBotTypingMessage(text){
+    const bubble=document.createElement("div");
+    bubble.className="avaj-msg avaj-bot";
+    msgs.appendChild(bubble);
+    msgs.scrollTop = msgs.scrollHeight;
+    typeWriterEffect(text,bubble);
+    saveMessage("bot",text);
+}
+function addUserMsg(text){
+    const bubble=document.createElement("div");
+    bubble.className="avaj-msg avaj-user";
+    bubble.textContent=text;
+    msgs.appendChild(bubble);
+    msgs.scrollTop = msgs.scrollHeight;
+    saveMessage("user",text);
+}
 
-    function addUserMsg(text){
-        const m = document.createElement("div");
-        m.className = "avaj-msg avaj-user";
-        m.textContent = text;
-        msgs.appendChild(m);
-        msgs.scrollTop = msgs.scrollHeight;
-        saveMessage("user", text);
-    }
+/* ---------------- نقطه‌های تایپ ---------------- */
+function addTyping(){
+    const t=document.createElement("div");
+    t.className="avaj-msg avaj-bot";
+    t.id="typing";
+    t.innerHTML='<div class="typing-dots"><div class="typing-dot"></div><div class="typing-dot"></div><div class="typing-dot"></div></div>';
+    msgs.appendChild(t);
+    msgs.scrollTop=msgs.scrollHeight;
+}
+function removeTyping(){ const t=document.getElementById("typing"); if(t)t.remove(); }
 
-    function addTyping(){
-        const typing = document.createElement("div");
-        typing.className = "avaj-msg avaj-bot";
-        typing.id = "typing";
-        typing.innerHTML = `
-            <div class="typing-dots">
-                <div class="typing-dot"></div>
-                <div class="typing-dot"></div>
-                <div class="typing-dot"></div>
-            </div>
-        `;
-        msgs.appendChild(typing);
-        msgs.scrollTop = msgs.scrollHeight;
-    }
-
-    function removeTyping(){ const t = document.getElementById("typing"); if(t) t.remove(); }
-
-    /* ---------------- LocalStorage تاریخچه ---------------- */
-    function saveMessage(role, text){
-        let history = JSON.parse(localStorage.getItem("avajHistory")||"[]");
-        history.push({role,text});
-        localStorage.setItem("avajHistory", JSON.stringify(history));
-    }
-
-    function loadHistory(){
-        let history = JSON.parse(localStorage.getItem("avajHistory")||"[]");
-        history.forEach(msg=>{
-            const bubble = document.createElement("div");
-            bubble.className = "avaj-msg " + (msg.role=="user"?"avaj-user":"avaj-bot");
-            bubble.textContent = msg.text;
-            msgs.appendChild(bubble);
+/* ---------------- ارسال پیام ---------------- */
+async function sendMessage(text){
+    if(!text) return;
+    addUserMsg(text);
+    txt.value="";
+    addTyping();
+    try{
+        const res = await fetch(URL,{
+            method:"POST",
+            headers:{"Content-Type":"application/json","Authorization":KEY},
+            body:JSON.stringify({model:"o3-mini-2025-01-31",messages:[{role:"user",content:text}]})
         });
-        msgs.scrollTop = msgs.scrollHeight;
+        removeTyping();
+        const data = await res.json();
+        const answer = data?.choices?.[0]?.message?.content || "خطا!";
+        addBotTypingMessage(answer);
+    }catch(e){
+        removeTyping();
+        addBotTypingMessage("❌ اتصال برقرار نشد!");
     }
+}
 
-    loadHistory(); // بارگذاری تاریخچه هنگام باز شدن
+/* ارسال با دکمه و اینتر */
+send.onclick = ()=>sendMessage(txt.value.trim());
+txt.addEventListener("keydown",e=>{ if(e.key==="Enter") sendMessage(txt.value.trim()); });
 
-    /* ---------------- ارسال ---------------- */
-    send.onclick = async ()=>{
-        const text = txt.value.trim();
-        if(!text) return;
-        addUserMsg(text);
-        txt.value = "";
-        addTyping();
-
-        try{
-            const res = await fetch(URL,{
-                method:"POST",
-                headers:{
-                    "Content-Type":"application/json",
-                    "Authorization":KEY
-                },
-                body:JSON.stringify({
-                    model:"o3-mini-2025-01-31",
-                    messages:[{role:"user",content:text}]
-                })
-            });
-
-            removeTyping();
-            const data = await res.json();
-            const answer = data?.choices?.[0]?.message?.content || "خطا!";
-            addBotTypingMessage(answer);
-
-        } catch(e){
-            removeTyping();
-            addBotTypingMessage("❌ اتصال برقرار نشد!");
-        }
-    };
-
+/* ---------------- سوال‌های آماده ---------------- */
+const presetQuestions=["سلام","کتاب‌های جدید چی هستند؟","چطور می‌توانم حساب بسازم؟"];
+presetQuestions.forEach(q=>{
+    const b=document.createElement("button");
+    b.className="quick-btn"; b.textContent=q;
+    b.onclick=()=>sendMessage(q);
+    quickBtns.appendChild(b);
 });
-</script>
 
+/* ---------------- چت جدید ---------------- */
+newChatBtn.onclick=()=>{ localStorage.removeItem("avajHistory"); loadHistory(); };
+</script>
 </body>
 </html>
